# superHype

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BACKEND.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  DESIGN.md  LICENSE  LINKEDIN_COMMUNITY_MANAGEMENT.md  README.md  SECURITY.md  SETUP.md  SKILL.md  TESTING.md  agents.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  logger.py  main.py  seed.py
backend/app/controllers/: asset_controller.py  auth_controller.py  campaign_controller.py  connection_controller.py  content_rule_controller.py  leaderboard_controller.py  post_controller.py  skill_controller.py  slack_controller.py  team_controller.py  user_controller.py
backend/app/core/: crypto.py  deps.py  engagement.py  linkedin_urn.py  (+6 more)
backend/migrations/: README  env.py
backend/scripts/: flush_queue.py  reset_campaign.py  reset_onboarding.py  smoke_generation.py  wipe_users.py
backend/tests/: conftest.py  test_assets_api.py  test_auth.py  test_campaign_service.py  test_campaigns_api.py  test_config.py  test_connections.py  test_content_rules_api.py  test_crypto.py  test_deps.py  test_engagement_service.py  test_generate_instructions.py  test_generation.py  test_health.py  test_leaderboard.py  test_linkedin_provider.py  test_linkedin_urn.py  test_models.py  test_pagination.py  test_posts_api.py  test_provider_protocol.py  test_reconcile.py  test_safe_fetch.py  test_schedule.py  test_security.py  test_seed.py  test_skill_test.py  test_skills.py  test_slack.py  test_teams_api.py  test_user_repo.py  test_user_team.py  test_users.py  test_worker_jobs.py  test_writing_skill_repo.py  test_x_connections.py  test_x_oauth_service.py  test_x_provider.py  test_x_urls.py
(+148 files in other folders)
