[project]
name = "super-hype-backend"
version = "0.1.0"
description = "super-hype API and worker: human-in-the-loop employee advocacy for LinkedIn"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "fastapi-sso>=0.21.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# ruff owns linting and import-sorting only; black owns formatting.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# E501: line length is black's job.
# UP046/UP047: keep Generic[T] style for pydantic/SQLAlchemy generic compatibility.
ignore = ["E501", "UP046", "UP047"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses these as argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "app.core.deps.require_role"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
plugins = []
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=26.5.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.18",
]
